--- a/about.html
+++ b/about.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<!-- Created by Professor Wergeles for CS4830 at the University of Missouri -->
+<html>
+    <head>
+        <title>about</title>
 <!-- Created by Professor Wergeles for CS4830 at the University of Missouri -->
 <h3>About Us</h3>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at quam vel metus suscipit consequat eu a nisl. Donec nec sapien vitae orci vulputate ornare et ut nulla. Vestibulum sit amet eros mauris. Mauris nisi metus, dictum in blandit sed, egestas ut tellus. Quisque non malesuada tellus. Integer elit libero, venenatis vitae condimentum nec, tristique quis dolor. Nulla dapibus, enim et pulvinar iaculis, nisl leo posuere risus, eu sodales ex velit nec enim. Maecenas auctor sapien vitae arcu consectetur semper. Sed malesuada accumsan pellentesque. Morbi commodo elit sed scelerisque venenatis.</p>
