--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <ul class="nav nav-pills pull-right">
                     
                         <li role="presentation" class="active"><a href="./">Home</a></li>
-                        <li role="presentation" class="active"><a href="./about">About</a></li>
+                        <li role="presentation" class="active"><a href="http://ec2-35-167-74-134.us-west-2.compute.amazonaws.com/CS4830-F17-HelloWorld/about.html">About</a></li>
                         <li role="presentation" class="active"><a href="./contact">Contact</a></li>
                         
                     </ul>
